gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-inline_const_pat.rs
fn main() {
    let const { () } = ();
// { dg-error ".E0658." "" { target *-*-* } .-1 }
}

